# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  README.org  shell.nix
ghissue-message/: Cargo.toml
src/: main.rs
