[package]
name = "ghissue-message"
version = "0.1.0"
authors = ["Łukasz Indykiewicz <lukasz.indykiewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
hyper = "0.12.27"
hyper-rustls = { version = "0.16.1", optional = true }
hyper-tls = { version = "0.3.2", optional = true }
native-tls = { version = "0.2.2", optional = true }
github-rs = "0.7"
serde_json = "1.0"
